--- a/_posts/2020-05-26-cmd-3.mdx
+++ b/_posts/2020-05-26-cmd-3.mdx
@@ -4,7 +4,8 @@ import * as MusicEmbed from '../components/MusicEmbed'
 
 export const metadata = Metadata.create({
   type: 'cmd',
-  title: 'cmd#3',
+  title: 'cmd #3',
+  description: 'Hello world',
   image: {
     src: '/images/def.jpeg',
     alt: 'toto',
