--- a/_posts/2020-05-24-cmd-1.mdx
+++ b/_posts/2020-05-24-cmd-1.mdx
@@ -4,13 +4,16 @@ import * as MusicEmbed from '../components/MusicEmbed'
 
 export const metadata = Metadata.create({
   type: 'cmd',
-  title: 'cmd#0',
+  title: 'cmd #0',
+  description: 'Hello world',
   image: {
     src: '/images/abcd.jpeg',
     alt: 'toto',
     caption: 'test test test'
   }
 }) 
+
+# `cmd` #0
 
 Salut les amis. Voici un petit paragraphe d'intro pour faire genre cette page a du contenu. Généralement je mets du [Jean-Claude Van Damme](https://www.faux-texte.com/jean-claude-10.htm) mais cette fois ci je me suis décidé à changer un peu. C'est pas mal non ?
 
