--- a/_posts/2020-05-26-cmd-3.mdx
+++ b/_posts/2020-05-26-cmd-3.mdx
@@ -4,7 +4,7 @@ import * as MusicEmbed from '../components/MusicEmbed'
 
 export const metadata = Metadata.create({
   type: 'cmd',
-  title: 'cmd #3',
+  title: 'cmd #2',
   description: 'Hello world',
   image: {
     src: '/images/def.jpeg',
@@ -14,6 +14,26 @@ export const metadata = Metadata.create({
 }) 
 
 # `cmd` #3
+
+Salut les amis. Voici un petit paragraphe d'intro pour faire genre cette page a du contenu. Généralement je mets du [Jean-Claude Van Damme](https://www.faux-texte.com/jean-claude-10.htm) mais cette fois ci je me suis décidé à changer un peu. C'est pas mal non ?
+
+## Paradise Deep Groove - I Love
+
+Alors pour commencer sans plus attendre dans le vif du sujet on va s'écouter un peu de deep house parce que ce mois de Mai est bien dark et qu'il nous faut un track pour matcher ça. Zou on teste l'embed Bandcamp.
+
+<MusicEmbed.Bandcamp album="3847376534" track="509184651" />
+
+## Ziggy Zeitgeist & Erica Tucceri - Tzimtzum
+
+On continue sans s'arrêter car on est des ouf et que malheuresement il n'y a pas que Bandcamp dans la vie ouais trop sad. Alors ici un petit track marrant trouvé sur Soundcloud tiens donc.
+
+<MusicEmbed.Soundcloud track="824253793" />
+
+## Laurent Garnier - 1-4 Doctor c'est chouette
+
+Je serais pas surpris que de temps en temps il me faille partager des trucs qui viennent de Mixcloud. Non pas que le but soit de partager beaucoup de mixes mais sait-on jamais hein. Et puis Laurent Garnier publie des trucs là bas donc faudra bien pouvoir le montrer aux copains non mais ho. Aller on teste ça.
+
+<MusicEmbed.Mixcloud feed="%2Flaurentgarnier%2Fwe-want-to-get-together-a-dj-mix-by-laurent-garnier-for-radio-meuh-circus-festival-2021%2F" />
 
 ## Prequel - I Still Love You
 
