fix cmd-0 img alt

--- a/_posts/2021-06-21-cmd-0.mdx
+++ b/_posts/2021-06-21-cmd-0.mdx
@@ -12,7 +12,7 @@ cacher c'est notre pain quotidien, mais on viendra mélanger tout ça avec un pe
 de soleil car faut pas perdre le nord non plus, hein. `,
   image: {
     src: '/images/cmd-0.jpg',
-    alt: 'toto',
+    alt: 'Des vaches basques dans la montagne',
     caption: 'Des vaches basques'
   }
 }) 
