--- a/_posts/2021-06-21-cmd-0.mdx
+++ b/_posts/2021-06-21-cmd-0.mdx
@@ -22,11 +22,11 @@ de soleil car faut pas perdre le nord non plus, hein. `,
 Aller hop hop hop on se lance pour cette première `cmd` ! Après une petite
 semaine de crapahutage dans les Pyrénées Basques tous les chakras ont été
 réinitialisés, le moral est au vert et tout est prêt pour lancer ce petit projet
-en MVP comme on dit dans la startup-nation, on se refait pas.
+en MVP comme on dit dans la startup-nation. On se refait pas.
 
 Au programme pour cette première aventure quelques chouettes découvertes de ces
 derniers jours. On sera assez orienté musique électro parce que faut pas se le
-cacher c'est notre pain quotidien, mais on viendra mélanger tout ça avec un peu
+cacher c'est notre pain quotidien, et on viendra mélanger tout ça avec un peu
 de soleil car faut pas perdre le nord non plus, hein.
 
 
@@ -34,7 +34,8 @@ de soleil car faut pas perdre le nord non plus, hein.
 
 Voilà donc quelque chose qui sort tout droit des confins de l'espace. Vous
 n'auriez pas imaginé que je puisse démarrer ce projet `cmd` sans attaquer
-directement avec un peu de beep boop experimental ? Moi non plus. 
+directement avec un peu de beep boop experimental ? Moi non plus. Team
+#blockhaus.
 
 C'est assez ambient. C'est un peu techno. Ça n'est pas trop tiré par les cheveux
 non plus. On s'assoit à côté de sa fenête pour regarder les gens passer dans la
@@ -47,11 +48,11 @@ rue et on démarre en douceur.
 
 Alors attention, on ne veut pas tomber tout de suite dans l'enchainement
 techno-toujours-pareil-boom-boom-dans-les-oreilles. Soyons honnête, ce sera le
-risque number one avec `cmd` on va pas se le cacher.
+risque numéro un avec `cmd` on va pas se le cacher.
 
-On donc profite d'un peu de douceur et de sensualité soul qui sent bon l'été.
-Attention ça peut réveiller les souvenirs mélancoliques de l'amour perdu. Vous
-êtes prévenus.
+On profite donc d'un peu de douceur et de sensualité soul qui sent bon l'été.
+Attention ça peut réveiller les souvenirs mélancoliques de l'amour perdu et
+piquer un peu. Vous êtes prévenus.
 
 <MusicEmbed.Youtube id="gjRLbzxz_3Y" />
 
@@ -69,10 +70,10 @@ funk et assez downtempo. On reste très doux.
 
 Consommer local pour sauver la planète. Je vous propose d'écouter l'album
 [Épisodes](https://b-and-ff.bandcamp.com/album/pisodes) d'Amazone, sur le label
-B&FF Records de Saint Nazaire, c'est pas très loin. Et puis ils sont venus
+B&FF Records de Saint Nazaire. C'est pas très loin. Et puis ils sont venus
 passer jouer dans mon voisin de blockhaus, encore plus près.
 
-Il fallait bien choisir alors je nous ais pris "Souvent" qui a un petit côté
+Il fallait bien choisir alors je nous ai pris "Souvent" qui a un petit côté
 synthpop avec une rythmique que je trouve assez marrante et décallée vous
 trouvez pas ? 
 
@@ -82,12 +83,14 @@ trouvez pas ?
 ## Folamour - The Journey ft. Zeke Manyika
  
 Hop hop on va chercher à bouger un peu plus avec Folamour qui a sorti son
-dernier album il y a quelques jours et c'est toujours très house.
+dernier album il y a quelques jours et c'est toujours très house. C'est bientôt
+l'été après tout.
 
 Ici le morceau The Journey avec Zeke Manyika est bien dançant avec une grosse
 baseline funky mais si on est attentif on sent comme un petit goût de mélancolie
 avec le clavier en arrière plan qui nous lache pas et qui nous rappelle de
-profiter du temps présent car dans la vie y'a des hauts, y'a des bas.
+profiter du temps présent car dans la vie y'a des hauts, y'a des bas et c'est
+comme ça.
 
 <MusicEmbed.Youtube id="KltH0A9HUbc" />
 
@@ -95,7 +98,7 @@ profiter du temps présent car dans la vie y'a des hauts, y'a des bas.
 ## Dele Sosimi - Turbulent Times (Armonica Remix)
 
 Ok on est parti pour de bon. Ici un track house / deep-house qui monte bien
-progressivement.  On s'imagine bien utiliser ce track dans un mix afin de passer
+progressivement. On s'imagine bien le passer dans un mix afin de passer
 d'une ambiance assez calme à quelque chose d'un peu plus énergique.
 
 C'est le moment où les gens se lèvent et viennent dancer. Enfin je crois que
@@ -127,7 +130,7 @@ du set qu'on oublie pas.
 Il parait que sa marque de fabrique c'est la techno "florale". Si il est vrai
 qu'il y avait surement plus de fleurs sur scène à ce moment que chez Interflora,
 ce track m'évoque surtout quelque chose d'assez dark. On rigole pas trop quoi,
-c'est du sérieux fais pas le malin.
+c'est du sérieux fais pas le malin coco.
 
 À écouter fort, merci.
 
@@ -153,9 +156,10 @@ Et puis : 120 vues sur Youtube, artwork des profondeurs. Gage de qualité. tmtc
 ## Lake Haze - That Rave Saved My Life
 
 Et voilà c'est l'heure de la fin. Je ne vais pas vous laisser sans matière à
-prendre conscience de l'absurdité de la vie non mais. Ce track c'est un peu
-comme regarder le ciel étoilé un soir d'été et se dire qu'il y a la même chose
-en dessous mais qu'en fait ça va la vie continue et c'est bien ainsi.
+prendre conscience de l'absurdité de la vie vous croyez quoi ? Ce track c'est un
+peu comme regarder le ciel étoilé un soir d'été et se dire qu'il y a la même
+chose en dessous, qu'en fait ça va la vie continue et que c'est bien ainsi, les
+étoiles.
 
 Allez on écoute cette pépite et on ressent le flow de mélancolie qui nous
 assaille. 
