--- a/_posts/2021-07-02-cmd-2.mdx
+++ b/_posts/2021-07-02-cmd-2.mdx
@@ -23,7 +23,7 @@ là) et toujours un peu de Techno.
 ## Youkounkoun - A Quoi Tu Danses Quand Tu Penses
 ### Synth Pop (2018)
 
-J'aime bien ce petite morceau qui sonne un peu vintage et qui est très adapté pour
+J'aime bien ce petit morceau qui sonne un peu vintage et qui est très adapté pour
 l'arrivée des apéros d'été avec les copains. C'est presque un peu cliché. Faites
 vous donc une idée en l'écoutant de suite. 
 
@@ -117,7 +117,7 @@ propulse direct sur le week-end qui arrive !
 ---
 
 Et voilà c'est terminé pour aujourd'hui. N'hésitez pas à me partager ce que vous
-pensez de cette `cmd` !
+pensez de cette `cmd` ! C'est maintenant l'heure de faire la sieste dans le
+Paris-Nantes qui ramène à la maison.
 
-C'est maintenant l'heure de faire la sieste dans le Paris-Nantes qui ramène à la
-maison. ++
+++
