Add missing desc

--- a/_posts/2021-06-25-cmd-1.mdx
+++ b/_posts/2021-06-25-cmd-1.mdx
@@ -5,7 +5,13 @@ import * as MusicEmbed from '../components/MusicEmbed'
 export const metadata = Metadata.create({
   type: 'cmd',
   title: 'cmd #1',
-  description: '',
+  description: `
+Et nous voilà déjà arrivé à la seconde cmd ! Petit rigolo que je suis je 
+commence bien sûr à compter à partir 0 comme tout bon ingé info qui se respecte.
+Cette semaine, petite nouveauté : j'ajoute un peu d'info sur le genre de chaque
+morceau, le potentiel album dont il est extrait, sa date de sortie, etc. Woop
+Woop ! Voilà donc cmd #1, prête à venir caresser vos doux tympans.
+`,
   image: {
     src: '/images/cmd-1.jpg',
     alt: 'Chassol jouant à Stéréolux',
