--- a/_posts/2021-07-02-cmd-2.mdx
+++ b/_posts/2021-07-02-cmd-2.mdx
@@ -5,7 +5,12 @@ import * as MusicEmbed from '../components/MusicEmbed'
 export const metadata = Metadata.create({
   type: 'cmd',
   title: 'cmd #2',
-  description: '',
+  description: `
+Cette semaine c'est cmd édition gueule de bois. On en profite pour tenter un
+grand écart du type bonne sortie de zone de confort. De la Synth Pop, du
+Breakbeat, du jazzy, de l'EDM (je ne sais pas encore si j'assume complètement celui
+là) et toujours un peu de Techno.
+`,
   image: {
     src: '/images/cmd-2.jpg',
     alt: "Un arbre au milieu d'une marre dans la forêt de Rambouillet",
