Add missing cmd-3 description

--- a/_posts/2021-07-09-cmd-3.mdx
+++ b/_posts/2021-07-09-cmd-3.mdx
@@ -6,6 +6,26 @@ export const metadata = Metadata.create({
   type: 'cmd',
   title: 'cmd #3',
   description: `
+Édition spéciale cette semaine car c'est la première cmd que je partage en
+public ! Elle n'est donc pas réservée aux proches copains et copines que je
+remercie tout plein pour le rodage des permières versions ♥
+Édition spéciale cette semaine car c'est la première cmd que je partage en
+public ! Elle n'est donc pas réservée aux proches copains et copines que je
+remercie tout plein pour le rodage des permières versions ♥
+Et à vous ami·e·s des internets et d'ailleurs : bienvenue sur cmd, j'espère que
+cela vous plaira ! \n
+Ces derniers jours ont rhymé avec joie, grisaille et trance. Joie - car le
+week-end dernier sonnait comme le premier vrai moment où retrouver beaucoup de
+gens dancer autour d'un DJ avec un grand grand grand sourir sur le visage.
+C'était le super set de Combe à la Station Nuage pour moi et ça a fait un bien fou.
+Ensuite grisaille - pour le temps mode bien déprime qu'on se traine depuis un
+moment. C'est qu'il serait temps de rallumer le soleil m'enfin voyons.
+Et puis trance - car j'ai (enfin) (re)découvert la trance comme dans ce
+superbe mix de Courtesy et je me demande ce que j'ai fait de ma vie tout ce temps sans ça.
+Vous l'aurez compris, il y aura de la grosse techno / trance au menu aujourd'hui
+mais comme on aime beaucoup de choses sur cmd on entendra aussi de la pop, du
+jazz, de l'ambient, de la house, du rap. Plein de choses ! Assez parlé, tout de
+suite le premier titre tout droit dans tes oreilles.
 `,
   image: {
     src: '/images/cmd-3.jpg',
