--- a/_posts/2021-07-16-cmd-4.mdx
+++ b/_posts/2021-07-16-cmd-4.mdx
@@ -14,7 +14,7 @@ soleil. C'était bien.\n
 C'est un peu un bon résumé de ma semaine, cet apparition d'un concert.\n
 Aujourd'hui pas de bossa nova dans cmd number 4 mais beaucoup de choses
 différentes pour le plaisir des oreilles : du rock, du post-punk, du pop, de
-l'ambient, de la techno, du rock et du ... Shibuya-kei (oui oui, tenez bon).
+l'ambient, de la techno et du ... Shibuya-kei (oui oui, tenez bon).
 `,
   image: {
     src: '/images/cmd-4.jpg',
@@ -33,7 +33,7 @@ C'est un peu un bon résumé de ma semaine, cet apparition d'un concert.
 
 Aujourd'hui pas de bossa nova dans `cmd` number 4 mais beaucoup de choses
 différentes pour le plaisir des oreilles : du rock, du post-punk, du pop, de
-l'ambient, de la techno, du rock et du ... Shibuya-kei (oui oui, tenez bon).
+l'ambient, de la techno et du ... Shibuya-kei (oui oui, tenez bon).
 
 
 ## Thom Yorke feat. Radiohead - Creep (Very 2021 Rmx)
