--- a/_posts/2021-08-06-cmd-7.mdx
+++ b/_posts/2021-08-06-cmd-7.mdx
@@ -179,7 +179,7 @@ Kelli Hand était décédée. Si cela a généré beaucoup d'émotion dans le mi
 musiques électroniques je ne la connaissait pas.
 
 J'ai donc branché les internets et suis allé écouter son
-travail. Et qu'elle tristesse comme à chaque fois d'avoir attendu la mort d'un
+travail. Et quelle tristesse comme à chaque fois d'avoir attendu la mort d'un
 ou d'une artiste pour découvrir son travail qui nous plait tant. Il y aura du
 K. Hand au programme de la prochaine `cmd`.
 
