fix cmd-8 missing description

--- a/_posts/2021-08-13-cmd-8.mdx
+++ b/_posts/2021-08-13-cmd-8.mdx
@@ -5,7 +5,12 @@ import * as MusicEmbed from '../components/MusicEmbed'
 export const metadata = Metadata.create({
   type: 'cmd',
   title: 'cmd #8',
-  description: '',
+  description: `Retour d'une programmation éclectique aujourd'hui avec un beau mélange des
+genres : Rap, Jazz, Rock, Ambient, Post-Punk, Disco, Techno, etc.
+La semaine passée a été riche en découvertes - cela rend toujours plus
+difficile de choisir 10 sons - et je crois que cela se reflète bien dans
+cette édition. Certains morceaux sont un peu exigeants mais ils en valent le coup.
+Accrochez-vous.`,
   image: {
     src: '/images/cmd-8.png',
     alt: "Une photo argentique ratée: clairement surexposée, on voit surtout trois tâches de couleurs rouge/blanche/bleu",
