--- a/_posts/2021-08-20-cmd-9.mdx
+++ b/_posts/2021-08-20-cmd-9.mdx
@@ -8,7 +8,7 @@ export const metadata = Metadata.create({
   description: `
 Déjà 10 cmd ! Et surtout déjà 10 semaines que je m'amuse à raconter ma vie ici
 sous prétexte de partager quelques morceaux de musique découverts les jours
-passées et que je trouve sympas.
+passés et que je trouve sympas.
 Par "sympa" je veux dire bien sûr : "Guillaume a trouvé ça sympa
 attention c'est peut-être chelou, le personnage est du genre à trouver un bruit
 de tronçonneuse cassée *intéressant*".
@@ -30,7 +30,7 @@ que d'habitude et peut–être plus de choses à la marge.
 
 Déjà 10 `cmd` ! Et surtout déjà 10 semaines que je m'amuse à raconter ma vie ici
 sous prétexte de partager quelques morceaux de musique découverts les jours
-passées et que je trouve sympas.
+passés et que je trouve sympas.
 Par "sympa" je veux dire bien sûr : "Guillaume a trouvé ça sympa
 attention c'est peut-être chelou, le personnage est du genre à trouver un bruit
 de tronçonneuse cassée *intéressant*".
