--- a/_posts/2021-08-20-cmd-9.mdx
+++ b/_posts/2021-08-20-cmd-9.mdx
@@ -142,7 +142,7 @@ est impécable. Je le vis comme un film qu'on devine très sombre. On en sort
 avec l'image d'une personne si déchirée et tourmentée qu'on se demande d'où elle
 trouve la force d'en faire un album.
 
-Et la qualité technique est bien là, que ce soit dans dans la voix (jamais
+Et la qualité technique est bien là, que ce soit dans la voix (jamais
 entendu quelqu'un couvrir un spectre grave-aigu si large et propre) ou le reste
 (allez par exemple voir ce [live accoustique](https://www.youtube.com/watch?v=KUjZKNCppmY)
 voix-piano).
@@ -157,7 +157,7 @@ a pas volé son nom, lui.
 ### Electro / Jazz / Funk - EP : Lucien & The Kimono Orchestra (2016)
 
 Il y a la musique qu'on écoute comme une fenêtre sur son passé. Peut-être la
-métaphore auditive des dimanches après-midi à regarder les viels albums photo
+métaphore auditive des dimanches après-midi à regarder les vieux albums photo
 comme dans les films.
 
 Je suis retombé par hasard sur Lucien & The Kimono Orchestra cette semaine et
