--- a/_posts/2021-08-27-cmd-10.mdx
+++ b/_posts/2021-08-27-cmd-10.mdx
@@ -94,7 +94,7 @@ Vous me remercierez. Plaisir d'offrir.)
 
 La transition est toute trouvée avec ce morceau qui a également retenu mon
 attention grâce à une voix que je trouve particulère. Ici c'est celle de
-Bertrand Belin qui pose cette asmophère très leftfied avec son timbre si grave.
+Bertrand Belin qui pose cette atmosphère très leftfied avec son timbre si grave.
 
 On retrouvera la même voix chez les Limiñanas avec le titre [Dimanche](https://www.youtube.com/watch?v=Mj144y9bpeo)
 (je vous conseille aussi le remix par Garnier).
