--- a/_posts/2021-08-27-cmd-10.mdx
+++ b/_posts/2021-08-27-cmd-10.mdx
@@ -149,7 +149,7 @@ Si vous aimez allez donc profiter de l'album entier, c'est dans la même veine e
 ## Florian Blauensteiner & Mr. Ho - BASF
 ### Techno (2014)
 
-Je suis fan c'est tout voilà. Dès les premières secondes qui, sous vous avez
+Je suis fan c'est tout voilà. Dès les premières secondes qui, si vous avez
 l'esprit mal placé, sonnent comme quelqu'un qui a le hoquet - ça m'arrive trop
 souvent - s'installe cet petit hymne techno peut-être un peu exigeant.
 
