--- a/_posts/2021-09-03-cmd-11.mdx
+++ b/_posts/2021-09-03-cmd-11.mdx
@@ -5,38 +5,139 @@ import * as MusicEmbed from '../components/MusicEmbed'
 export const metadata = Metadata.create({
   type: 'cmd',
   title: 'cmd #11',
-  description: '',
+  description: `
+Une fois n'est pas coutume cette cmd du vendredi n'est pas vraiment *du
+vendredi*. Alors bien sûr lors les 11 cmd précédentes je n'ai pas sélectionné
+la dizaine morceaux à partager parmis ceux écoutés la semaine, écrit un
+petit texte pour chacun puis tenté d'y ajouter une introduction tenant le tout,
+tout ça très tôt chaque vendredi matin. Non. C'est le travail de quelques jours.
+Mais ça, cher·e lecteur·ice, tu ne le sais pas et ça me donne l'impression de
+travailler dans l'ombre. J'aime bien ça.
+Or cette semaine l'affaire est trop grosse pour rester cachée. C'est mercredi
+soir 22h30 et je compte bien écrire cette cmd d'une traite (la sélection a
+été faite hier, n'abusons pas). Ma fin de semaine est chargée, voyez-vous. Je
+vais faire du vélo avec des potos.
+Je me faisais la réflexion hier que j'ai parfois une approche ambivalente avec
+cmd : je commence souvent la sélection avec l'envie de lui donner une forme et
+un contenu particulier puis je me confronte à la liste des morceaux mis de côté
+dans la semaine et je vois que clairement cela ne va pas coller. Rien de ce que
+j'ai écouté ne correspond.
+Elle est vraiment intéressante, au fond, cette
+contrainte arbitraire de partager des morceaux *que j'ai écouté les 7 derniers
+jours*. Comme un peintre qui peignerait avec des couleurs imposées par
+par d'autres. Vous comme, nous moi sommes à la merci du même hasard, des mêmes
+surprises, des mêmes émotions et du même agenda qui me font aller écouter
+plutôt ça que ça. Au fond je ne fait que filtrer un peu avec ce qui me parle
+dans l'instant.
+Je ne suis qu'un filtre.
+  `,
   image: {
-    src: '/images/cmd-10.png',
-    alt: "Morceau d'un toit éclairé par le soleil couchant",
-    caption: "En écoutant du jazz"
+    src: '/images/cmd-11.png',
+    alt: "Photo d'un chiot corgi en gros plan",
+    caption: "Un artichaut"
   }
 }) 
 
+Une fois n'est pas coutume cette `cmd` du vendredi n'est pas vraiment *du
+vendredi*. Alors bien sûr lors les 11 `cmd` précédentes je n'ai pas sélectionné
+la dizaine morceaux à partager parmis ceux écoutés la semaine, écrit un
+petit texte pour chacun puis tenté d'y ajouter une introduction tenant le tout,
+tout ça très tôt chaque vendredi matin. Non. C'est le travail de quelques jours.
+Mais ça, cher·e lecteur·ice, tu ne le sais pas et ça me donne l'impression de
+travailler dans l'ombre. J'aime bien ça.
+
+Or cette semaine l'affaire est trop grosse pour rester cachée. C'est mercredi
+soir 22h30 et je compte bien écrire cette `cmd` d'une traite (la sélection a
+été faite hier, n'abusons pas). Ma fin de semaine est chargée, voyez-vous. Je
+vais faire du vélo avec des potos.
+
+Je me faisais la réflexion hier que j'ai parfois une approche ambivalente avec
+`cmd` : je commence souvent la sélection avec l'envie de lui donner une forme et
+un contenu particulier puis je me confronte à la liste des morceaux mis de côté
+dans la semaine et je vois que clairement cela ne va pas coller. Rien de ce que
+j'ai écouté ne correspond.
+ 
+Elle est vraiment intéressante, au fond, cette
+contrainte arbitraire de partager des morceaux *que j'ai écouté les 7 derniers
+jours*. Comme un peintre qui peignerait avec des couleurs imposées par
+par d'autres. Vous comme, nous moi sommes à la merci du même hasard, des mêmes
+surprises, des mêmes émotions et du même agenda qui me font aller écouter
+plutôt ça que ça. Au fond je ne fait que filtrer un peu avec ce qui me parle
+dans l'instant.
+
+Je ne suis qu'un filtre.
+
 
 ## Kae Tempest - Firesmoke 
-### Pop
+### Hip Hop / Spoken Word - Album : The Book Of Traps And Lessons (2019)
+
+On commence aujourd'hui par de la grande poésie. Et la prod en arrière plan
+est comme une caresse toute douce un soir d'été.
+
+Vous me pardonnerez, c'est en anglais. Je vous laisse aller chercher les lyrics
+entiers mais voici un petit extrait.
+
+> So go on, give me three days of your body and mine <br />
+> Time is a blind eye and I see your mind in my mind's eye <br />
+> You make me immortal <br />
+> You take me to space <br />
+> You are a planet <br />
 
 <MusicEmbed.Youtube id="pwMtfS0Tqr8" />
 
 
 ## Parchman - Let it Flow
-### Indie Rock
+### Indie Rock (1990)
+
+Il semblerait que le vrai genre du morceau soit du "baggy", que ça soit une
+spécialité de Manchester et que  une recette à base de rock un peu
+psychédélique et de funk (on l'entend ici avec la guitare). C'est éclectique `cmd`,
+hein.
+
+Baggy ou non je me représente très bien quelqu'un très très zen en baggy,
+justement, nous dire à tous "Let it Floooooow" - ce sera le mantra de la semaine.
 
 <MusicEmbed.Youtube id="Sez-OoIXYNU" />
 
 
 ## La Jungle - Hahehiho
-### Rock - Album : II (2016)
+### Rock / Trance - Album : II (2016)
+
+Alors ce morceau pourrait faire une `cmd` à lui tout seul. Je n'en ai toujours pas
+fait le tour car il s'y passe vraiment plein de choses (assez expérimentales il
+faut l'avouer mais vous me connaissez).
+
+Le point central ici semble-t-il, c'est la *loop*. C'est très répétitif (comme le
+reste de l'album) mais quelque chose de très riche se construit tout de même au
+fil des 8 minutes.
+
+Ça sonne rock. Ça sonne aussi metal, noise et trance parfois. Je vous laisse
+voir.
 
 <MusicEmbed.Bandcamp album="247609450" track="3445508001" />
 
 
 ## Joe Smooth - Promised Land
-### House / Funk
+### House / Funk - Album : Promised Land (1988)
 
-La basseline mazette
-plage copains un petit chiot que nous faut-il de plus je me questionne encore
+Ah! J'attendais ce morceau car 1) il est très bien (écoutez moi cette baseline
+mazette si vous dansez pas à fin qui êtes vous ???) et 2) c'est pour moi
+l'occasion de vous raconter comment je l'ai déniché.
+
+Imaginez-vous une plage avec de super copains et copines. Un pic nique de qualité
+gastronomique (si on oublie que j'avais mis trop de mayo dans le club sandwich)
+suivi d'un match d'impro tip top avec comme arrière plan le soleil qui se couche
+sur la mer.
+
+Là vous vous dites "ok coco t'as passé un bon week-end chouette pour toi" mais
+je ne vous ai pas encore partagé le meilleur : il y avait un bébé corgi ultraaa
+mignon qui s'appelle Artichaut. Si si je vous jure.
+
+Bref. Plage, copains et copines, un petit chiot. Que nous faut-il de plus ? Je
+me questionne encore.
+
+(J'ai oublié de vous mentionner le DJ set sur la plage. C'est là que j'ai niché
+cette petite pépite).
 
 <MusicEmbed.Youtube id="V09x2y9MHbA" />
 
@@ -44,34 +145,67 @@ plage copains un petit chiot que nous faut-il de plus je me questionne encore
 ## Timothy Leary - Why Not? Why Not? Why Not?
 ### Ambient / Rock - Album : Beyond Life With Timothy Leary (1997)
 
-les cloches comme comme une sirène au loin
-quand la rythmique commence à 1min 42s
+Forcément une fois le week-end terminé on se retrouve sans bébé chien et là
+c'est dur.
 
-On part en méditation / trance et quand la musique s'arrête on sait pas trop
-dire où on vient d'atterrir 
+Alors sans chiot dans ma tête ça donne un peu comme ce morceau. On part en
+méditation / trance et quand la musique s'arrête on sait pas trop dire où on
+vient d'atterrir.
+
+Il y avait des cloches comme une sirène au loin c'est sur. Quelqu'un qui parle
+et une rythmique entrainante à partir de 1min 42s. Sacré voyage.
 
 <MusicEmbed.Youtube id="45nZn5P5CQA" />
 
 
 ## Bamboubou - Composer
-### Techno / Breakbeat
+### Techno / Breakbeat - Album : Centrum (2015)
 
-J'ai découvert les deux derniers album de Bamboubou est j'ai été subjugué part
-leur qualité
+J'ai découvert les deux derniers album de Bamboubou qui sont incroyables de part
+leur qualité technique.
+
+Exemple ici avec Composer. C'est breaké et haché dans tous les sens et pourtant
+le son est parfait et ça raconte un vrai truc. L'équilibre est très bien trouvé
+entre la rythmique, la mélodie et l'espèce de bout de synthé plus grave qui
+n'arrivera pas à démarrer de tout le morceau. Chapeau.
 
 <MusicEmbed.Bandcamp album="3183718039" track="3189170404" />
 
 
 ## Caterina Barbieri - This Causes Consciousness to Fracture
-###
+### Ambient / Experimental - Patterns Of Consciousness (2017)
 
-Porte bien son nom 
+Nous n'avons pas eu droit à un peu d'ambient beep boop la semaine dernière il
+est grand temps de se rattraper cette semaine.
 
-<MusicEmbed.Youtube id="IZnOCCShLIA" />
+Je suis tombé à nouveau sur Caterina Barbieri que je connais bien déjà mais dont
+cela faisait fort trop longtemps que je n'avais pas mis son album Patterns Of
+Consciousness (le meilleur à mes yeux) dans mes oreilles.
+
+Alors si 14min de beep boop étranges produits brut de décoffrage sur du modulaire
+patché de partout ne vous font pas peur, allez-y plongez.
+Le morceau porte bien son nom. Je ne peux donc pas êtes tenu responsable d'un
+quelconque noeud de cerveau. 
+
+<MusicEmbed.Bandcamp album="572701588" track="1822141199" />
 
 
 ## Pablo Bozzi - Last Moscow Mule
-### Techno
+### Techno - EP : Last Moscow Mule (2020)
+
+Dans Harry Potter je-ne-sais-plus-combien Hermione utilise un retourneur de
+temps, instrument qui me semble ma foi fort utile. J'aurais par exemple utilisé
+l'engin pour me retrouver au Macadam samedi soir dernier sans louper la plage,
+les ami·e·s et le petit chien.
+
+Il y avait Pablo Bozzi qui passait là bas (si ça vous dit quelque chose c'est
+peut-être parce que c'est la moitié de INFRAVISION dont je vous ai parlé dans
+[`cmd`#9](/post/2021-08-20-cmd-9)) et je commence à apprécier de plus en plus son
+travail.
+
+Alors pour le morceau qui nous concerne ici j'aime beaucoup ce qui s'y passe à
+2min 30s. On part sur des choeurs et tout de suite moi ça plait quand on ajoute
+ça sur de la techno. Ça élève l'atmosphère un instant. On en redemande.
 
 <MusicEmbed.Youtube id="Wh3-jKLHc9w" />
 
@@ -79,7 +213,23 @@ Porte bien son nom
 ## Charles Aznavour - Et Bailler Et Dormir
 ### French - Album : Chante... Charles Aznavour (1953)
 
-Il parait que c'est tiré du premier album du monsieur 
+Bientôt minuit ici donc morceau de circonstance avec quelque chose tiré
+parait-il du premier album d'Aznavour : "Aznavour Chante... Charles Aznavour".
+Fallait pas avoir le syndrome de l'imposteur pour démarrer fort a avec un titre
+d'album comme ça hein. 1953 c'était peut-être un autre délire.
+
+Alors on remarquera ce synthé hyper vintage. Cette petite rythmique très chanson
+française et puis la voix d'Aznavour à la fin qui crie presque sur les derniers
+vers :
+
+> J'ai fait mon paradis sur la terre <br />
+> Car la paix règne au fond de mon cœur  <br />
+> Et vraiment si c'était à refaire  <br />
+> Je saurais pour garder mon bonheur  <br />
+> Et rêver, et sourire  <br />
+> Et bâiller, et dormir  <br />
+
+Bonne nuit !
 
 <MusicEmbed.Youtube id="NfESdtbfAxY" />
 
