--- a/_posts/2021-09-03-cmd-11.mdx
+++ b/_posts/2021-09-03-cmd-11.mdx
@@ -8,7 +8,7 @@ export const metadata = Metadata.create({
   description: `
 Une fois n'est pas coutume cette cmd du vendredi n'est pas vraiment *du
 vendredi*. Alors bien sûr lors les 11 cmd précédentes je n'ai pas sélectionné
-la dizaine morceaux à partager parmis ceux écoutés la semaine, écrit un
+la dizaine de morceaux à partager parmis ceux écoutés la semaine, écrit un
 petit texte pour chacun puis tenté d'y ajouter une introduction tenant le tout,
 tout ça très tôt chaque vendredi matin. Non. C'est le travail de quelques jours.
 Mais ça, cher·e lecteur·ice, tu ne le sais pas et ça me donne l'impression de
@@ -40,7 +40,7 @@ Je ne suis qu'un filtre.
 
 Une fois n'est pas coutume cette `cmd` du vendredi n'est pas vraiment *du
 vendredi*. Alors bien sûr lors les 11 `cmd` précédentes je n'ai pas sélectionné
-la dizaine morceaux à partager parmis ceux écoutés la semaine, écrit un
+la dizaine de morceaux à partager parmis ceux écoutés la semaine, écrit un
 petit texte pour chacun puis tenté d'y ajouter une introduction tenant le tout,
 tout ça très tôt chaque vendredi matin. Non. C'est le travail de quelques jours.
 Mais ça, cher·e lecteur·ice, tu ne le sais pas et ça me donne l'impression de
