--- a/_posts/2021-09-03-cmd-11.mdx
+++ b/_posts/2021-09-03-cmd-11.mdx
@@ -25,7 +25,7 @@ j'ai écouté ne correspond.
 Elle est vraiment intéressante, au fond, cette
 contrainte arbitraire de partager des morceaux *que j'ai écouté les 7 derniers
 jours*. Comme un peintre qui peignerait avec des couleurs imposées par
-par d'autres. Vous comme, nous moi sommes à la merci du même hasard, des mêmes
+par d'autres. Vous comme moi, nous sommes à la merci du même hasard, des mêmes
 surprises, des mêmes émotions et du même agenda qui me font aller écouter
 plutôt ça que ça. Au fond je ne fait que filtrer un peu avec ce qui me parle
 dans l'instant.
@@ -60,7 +60,7 @@ j'ai écouté ne correspond.
 Elle est vraiment intéressante, au fond, cette
 contrainte arbitraire de partager des morceaux *que j'ai écouté les 7 derniers
 jours*. Comme un peintre qui peignerait avec des couleurs imposées par
-par d'autres. Vous comme, nous moi sommes à la merci du même hasard, des mêmes
+par d'autres. Vous comme moi, nous sommes à la merci du même hasard, des mêmes
 surprises, des mêmes émotions et du même agenda qui me font aller écouter
 plutôt ça que ça. Au fond je ne fait que filtrer un peu avec ce qui me parle
 dans l'instant.
