--- a/_posts/2021-09-03-cmd-11.mdx
+++ b/_posts/2021-09-03-cmd-11.mdx
@@ -90,7 +90,7 @@ entiers mais voici un petit extrait.
 ### Indie Rock (1990)
 
 Il semblerait que le vrai genre du morceau soit du "baggy", que ça soit une
-spécialité de Manchester et que  une recette à base de rock un peu
+spécialité de Manchester et que c'est une recette à base de rock un peu
 psychédélique et de funk (on l'entend ici avec la guitare). C'est éclectique `cmd`,
 hein.
 
