fix missing desc

--- a/_posts/2021-09-17-cmd-13.mdx
+++ b/_posts/2021-09-17-cmd-13.mdx
@@ -5,7 +5,20 @@ import * as MusicEmbed from '../components/MusicEmbed'
 export const metadata = Metadata.create({
   type: 'cmd',
   title: 'cmd #13',
-  description: '',
+  description: `
+Samedi dernier c'était week-end number one de Scopitone édition spéciale
+post-confinement(s). Comprendre : édition de moindre envergure mais très bien
+quand même.
+Samedi soir dernier donc, vous m'auriez trouvé installé sur une chaise dans le
+Warehouse sous son sytème son qu'on aime pas trop (du tout). Si si. Ça part mal
+il faut l'avouer. Alors si ces conditions de départ jouaient plutôt en la
+défaveur de la soirée, j'en suis finalement sorti avec une très belle surprise
+en découvrant le duo Frieder Nagel & Maotik mais surtout une énorme claque avec
+Tim Hecker. Un nouveau moment chapelle.
+Tellement content que j'y retourne ce week-end aller zou.
+Cette semaine le choix était complexe. Trop de morceaux bien découverts. Si peu
+de place dans une cmd. La règle c'est la règle.
+  `,
   image: {
     src: '/images/cmd-13.png',
     alt: "Photo de mon salon très sous exposée",
