--- a/_posts/2021-10-01-cmd-15.mdx
+++ b/_posts/2021-10-01-cmd-15.mdx
@@ -113,7 +113,7 @@ Autre genre de techno ici avec quelque chose de moins mélancolique, plus dark,
 plus breaké - surtout dans cette version remix de Iron Curtis. De quoi nous
 faire une belle transition en DJ set.
 
-J'aime la côté planant qu'amène la petite phrase qui revient part moment mais
+J'aime le côté planant qu'amène la petite phrase qui revient part moment mais
 que je n'entends pas bien. "J'ai eu la chance de ... " ? Ça restera un mystère.
 À vous de continuer l'histoire.
 
@@ -154,9 +154,9 @@ phares.
 ### Synth Pop / Indie Rock - Album : Hissing Fauna, Are You The Destroyer? (2007)
 
 Pour redescendre en douceur, un superbe mélange Rock / Synth Pop ici : côté Rock
-part la guitare et la rythmique, côté Synth Pop par les petits Synthé old school
-qui viennent se balader sur la fin du morceau. Le morceau invite au voyage
-introspectif avec ses 11 minutes 
+part la guitare et la rythmique, côté Synth Pop par les petits synthés old
+school qui viennent se balader sur la fin du morceau. Le morceau invite au
+voyage introspectif avec ses 11 minutes 
 
 À écouter fort. Merci Thelma ! (encore toi décidement !)
 
