fix typo for God please forgive me

--- a/_posts/2021-10-08-cmd-16.mdx
+++ b/_posts/2021-10-08-cmd-16.mdx
@@ -71,7 +71,7 @@ bien.
 ### Trip Hop - Album: Living Entities (2020)
 
 Ça sonne un peu Trip Hop, un peu Radiohead chez vous aussi ? C'est normal, c'est
-un des projets de Noah Yorke, fils de Tom - notre Dieu à tous.
+un des projets de Noah Yorke, fils de Thom - notre Dieu à tous.
 
 On retrouve des indices de la filiation dans la musique aussi. Écoutez donc
 comment la voix est envoyée dans un reverb + delay ou comment le morceau se
