--- a/_posts/2021-11-05-cmd-20.mdx
+++ b/_posts/2021-11-05-cmd-20.mdx
@@ -53,7 +53,7 @@ d'album. C'est très `cmd`-compatible comme tambouille.
 
 Si j'ai découvert Beak> cette semaine, je connaissais certainement ce morceau
 Allé Sauvage avant car il a agit comme une madeleine de Proust mais sans la
-révélation. Où ai-je déjà entendu ce morceau ? Peut-être sur PPB. Mystère.
+révélation. Où ai-je déjà entendu ce morceau ? Peut-être sur PBB. Mystère.
 
 https://beak.bandcamp.com/track/all-sauvage
 
@@ -82,7 +82,7 @@ https://www.youtube.com/watch?v=APH42GVgUTM
 ### Krautrock - Album : Faust IV (1973)
 
 Woohohohohooohhahhhhhh. Ça commence comme ça puis ça enchaine sur 2min 30s de
-Krautrock marrant. C'est trop court mais on fera avec
+Krautrock marrant. C'est trop court mais on fera avec.
 
 L'arrangement et la balance left/right sont assez surprenants et apportent
 beaucoup à l'effet décousu du morceau. 
@@ -105,8 +105,8 @@ mental qui ressemble plus au monde des Teletubbies sous CBD qu'à la planète
 Terre. 
 
 Bref, dans ce lot incroyable de pépites perchées, on trouve ce "Trésor" remisé
-par Paradis. Présenté comme un *remix*, j'ai envie dire que c'est plutôt une
-*cover*, ce morceau. C'est un beau mélange des éléments des langages
+par Paradis. Présenté comme un *remix*, j'ai envie de dire que c'est plutôt une
+*cover* ce morceau. C'est un beau mélange des éléments des langages
 musicaux des deux artistes. Le côté planant perché d'un Flavien Berger avec la
 Synth Pop française de Paradis et leur baseline caractéristique.
 
