--- a/_posts/2021-11-12-cmd-21.mdx
+++ b/_posts/2021-11-12-cmd-21.mdx
@@ -98,7 +98,7 @@ https://soundcloud.com/radiomentale-1/sinking-live-variations
 Je devais passer ce morceau sur
 [Prun'](https://www.prun.net/emission/8301-tumulte) mardi dernier mais il a
 finalement laissé sa place sur le conducteur à un autre morceau de finji, plus
-court. C'est une chose de jouer les curateur•ice•s de sons. S'en est une autre
+court. C'est une chose de jouer les curateur•ice•s de sons. C'en est une autre
 de préparer une tracklist qui tient dans 60 minutes, pas plus.
 
 Pas de présence radiophonique donc mais un passage sur `cmd` pour ce morceau
@@ -139,7 +139,7 @@ https://thenaturalyogurtband.bandcamp.com/track/57-lashes-of-the-mallet
 ### Psychedelic Soul - Album : If Words Were Flowers (2021)
 
 On flash parfois sur un morceau pour un détail. Je vous propose If Words Were
-Flowers  principalement pour les magnifique 30 secondes de chant où l'on entend
+Flowers  principalement pour les magnifiques 30 secondes de chant où l'on entend
 Curtis Harding certainement entouré d'un choeur.
 
 Et comme c'est la première track de l'album éponyme et qu'elle nous laisse
@@ -157,7 +157,7 @@ Japon en 1980 (vous l'auriez vite deviné à l'oreille).
 
 Je suis à peu prêt certain d'avoir collecté ça en shazaman discrètement au
 Warehouse le week-end dernier. La question à 100 points maintenant c'est comment
-place-on un morceau de ce genre dans un set ? Ça me semble pas si trivial que
+place-t-on un morceau de ce genre dans un set ? Ça me semble pas si trivial que
 ça.
 
 Aller, 9 minutes 32 secondes pour notre plus grand plaisir.
