fix typo again sorry again God Thom Yorke

--- a/_posts/2021-11-12-cmd-21.mdx
+++ b/_posts/2021-11-12-cmd-21.mdx
@@ -34,7 +34,7 @@ C'est Noël avant l'heure en ce mois de Novembre. Radiohead réédite deux album
 iconiques (Kid A et Amnesiac) en un combo KID A MNESIA truffé d'inédits, de
 nouvelles versions et de morceaux piochés à droite à gauche. C'est un gros bébé
 de 34 tracks tout de même. De quoi tenir un moment avant les prochaines sorties
-de Tom York et compagnie.
+de Thom Yorke et compagnie.
 
 Parmi cette musique d'un autre monde, ce tout doux Fog (Again Again Version).
 Pourquoi Again Again? Parce qu'il y a eu
