--- a/_posts/2021-11-19-cmd-22.mdx
+++ b/_posts/2021-11-19-cmd-22.mdx
@@ -20,7 +20,7 @@ Bref, rien à voir mais ce `cmd` #22 ça partait très mal mal. J'avais mis de c
 17 morceaux, c'est à dire 7 de trop au moins. Le plus complexe a donc été de
 choisir et choisir j'aime pas ça.
 
-Si la semaine dernière était calm, on sera un peu plus pêchu aujourd'hui,
+Si la semaine dernière était calme1, on sera un peu plus pêchu aujourd'hui,
 surtout après les quelques morceaux Indie Pop / Jazz / Synth Pop passés pour
 laisser place à la techno. C'est la fête.
 
