extract domain and article components

--- a/blog/_posts/2021-06-21-cmd-0.mdx
+++ b/blog/_posts/2021-06-21-cmd-0.mdx
@@ -1,4 +1,4 @@
-import * as Metadata from '../lib/postMetadata'
+import { Metadata } from '@cmd/domain'
 
 import * as MusicEmbed from '../components/MusicEmbed'
 
