--- a/blog/_posts/2021-08-06-cmd-7.mdx
+++ b/blog/_posts/2021-08-06-cmd-7.mdx
@@ -1,4 +1,4 @@
-import * as Metadata from '../lib/postMetadata'
+import { Metadata } from '@cmd/domain'
 
 import * as MusicEmbed from '../components/MusicEmbed'
 
