extract layout header footer music-embed

--- a/blog/_posts/2021-06-21-cmd-0.mdx
+++ b/blog/_posts/2021-06-21-cmd-0.mdx
@@ -1,6 +1,6 @@
 import { Metadata } from '@cmd/domain'
 
-import * as MusicEmbed from '../components/MusicEmbed'
+import * as MusicEmbed from '@cmd/ui-music-embed'
 
 export const metadata = Metadata.create({
   type: 'cmd',
