--- a/blog/_posts/2021-07-02-cmd-2.mdx
+++ b/blog/_posts/2021-07-02-cmd-2.mdx
@@ -1,4 +1,4 @@
-import { Metadata } from '@cmd/domain'
+import { Metadata } from '@cmd/domain-post'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
