--- a/blog/_posts/2021-08-20-cmd-9.mdx
+++ b/blog/_posts/2021-08-20-cmd-9.mdx
@@ -1,4 +1,4 @@
-import { Metadata } from '@cmd/domain'
+import { Metadata } from '@cmd/domain-post'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
