clean last domain-related things from blog/

--- a/blog/_posts/2021-07-02-cmd-2.mdx
+++ b/blog/_posts/2021-07-02-cmd-2.mdx
@@ -1,8 +1,8 @@
-import { Metadata } from '@cmd/domain-post'
+import { Metadata } from '@cmd/domain-metadata'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
-export const metadata = Metadata.create({
+export const metadata = Metadata.createCmd({
   type: 'cmd',
   title: 'cmd #2',
   description: `
