--- a/blog/_posts/2021-08-13-cmd-8.mdx
+++ b/blog/_posts/2021-08-13-cmd-8.mdx
@@ -1,8 +1,8 @@
-import { Metadata } from '@cmd/domain-post'
+import { Metadata } from '@cmd/domain-metadata'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
-export const metadata = Metadata.create({
+export const metadata = Metadata.createCmd({
   type: 'cmd',
   title: 'cmd #8',
   description: `Retour d'une programmation éclectique aujourd'hui avec un beau mélange des
