--- a/blog/_posts/2021-10-08-cmd-16.mdx
+++ b/blog/_posts/2021-10-08-cmd-16.mdx
@@ -1,8 +1,8 @@
-import { Metadata } from '@cmd/domain-post'
+import { Metadata } from '@cmd/domain-metadata'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
-export const metadata = Metadata.create({
+export const metadata = Metadata.createCmd({
   type: 'cmd',
   title: 'cmd #16',
   description: `Vous le connaissez peut-être, vous aussi, ce phénomème que j'ai envie d'appeler
