--- a/blog/_posts/2021-10-15-cmd-17.mdx
+++ b/blog/_posts/2021-10-15-cmd-17.mdx
@@ -1,8 +1,8 @@
-import { Metadata } from '@cmd/domain-post'
+import { Metadata } from '@cmd/domain-metadata'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
-export const metadata = Metadata.create({
+export const metadata = Metadata.createCmd({
   type: 'cmd',
   title: 'cmd #17',
   description: `Déjà vendredi et déjà cmd. Pfiou c'est qu'on a plus une minute à soi avec
