--- a/blog/_posts/2021-10-28-cmd-19.mdx
+++ b/blog/_posts/2021-10-28-cmd-19.mdx
@@ -1,8 +1,8 @@
-import { Metadata } from '@cmd/domain-post'
+import { Metadata } from '@cmd/domain-metadata'
 
 import * as MusicEmbed from '@cmd/ui-music-embed'
 
-export const metadata = Metadata.create({
+export const metadata = Metadata.createCmd({
   type: 'cmd',
   title: 'cmd #19',
   description: `19ème cmd écrit d'une traite avec le support d'un petit verre de vin blanc
