--- a/blog/_posts/2021-12-31-cmd-28.mdx
+++ b/blog/_posts/2021-12-31-cmd-28.mdx
@@ -14,7 +14,7 @@ export const metadata = Metadata.createCmd({
 
 Est-ce qu'on va avoir droit à un `cmd` spécial fin d'année ? Que nenni. Ce sera un `cmd` classique. La règle, c'est la règle : entre 8 et 10 morceaux découverts ces 7 derniers jours, un petit texte pour chaque et voilà.
 
-C'est vrai qu'en ce 31 décembre 2021, il serait de bon ton de partir dans des élans rétrospectifs, montrer à quels point les mois passés avec `cmd` ont été merveilleux et ont changés en bien la vie de milliers de personnes. Ou bien poser ici une petite anecdote. Un couple se serait formé grâce à `cmd`, aurait maintenant deux cockers, un Renaud Scenic et des triplés prévus pour Février.
+C'est vrai qu'en ce 31 décembre 2021, il serait de bon ton de partir dans des élans rétrospectifs, montrer à quel point les mois passés avec `cmd` ont été merveilleux et ont changés en bien la vie de milliers de personnes. Ou bien poser ici une petite anecdote. Un couple se serait formé grâce à `cmd`, aurait maintenant deux cockers, un Renaud Scenic et des triplés prévus pour Février.
 
 C'est bien sur faux car n'étant pas passé par une école de commerce je n'ai pas le pouvoir de réaliser une si belle campagne marketing. Néanmoins il faut dire que ces 28 semaines de `cmd` en 2021 m'ont bien aidé, moi, à avancer face au vent dans cette drôle d'année et d'enfin trouver quoi faire autour de cette chose étrange qui est la musique dans ma vie. Et, si cela peut faire plaisir à quelques lecteur•ice•s au passage, voilà qui est vraiment chouette.
 
