--- a/blog/_posts/2022-01-14-cmd-30.mdx
+++ b/blog/_posts/2022-01-14-cmd-30.mdx
@@ -114,8 +114,7 @@ https://www.youtube.com/watch?v=qnweKclCLRk
 
 
 
-## Les Clopes - Je fume des clopes dans un blockhaus noir parce que je suis
-déprimé
+## Les Clopes - Je fume des clopes dans un blockhaus noir parce que je suis déprimé
 
 ### New Wave - Album : Les Clopes (2019)
 
