--- a/blog/_posts/2022-01-28-cmd-32.mdx
+++ b/blog/_posts/2022-01-28-cmd-32.mdx
@@ -132,7 +132,7 @@ On découvre la DJ et productrice Courtesy posant ses galettes de trance dans un
 coin pour produire de l'Ambient. C'était principalement lors du premier
 confinement de 2020, comme un remède pour calmer ses  angoisses et insomnies.
 
-L'EP ne sort qu'en mars chez Kulør, sur le label de Courtesy. On peut néanmoins
+L'EP ne sort qu'en mars chez Kulør, le label de Courtesy. On peut néanmoins
 déjà profiter du très doux "Night Journeys ||". Grosses nappes de synthé, voix
 perchées par dessus et cette ritournelle d'arpèges un peu inquiétants pour
 texturer le tout.
