--- a/blog/_posts/2022-02-03-cmd-33.mdx
+++ b/blog/_posts/2022-02-03-cmd-33.mdx
@@ -49,7 +49,7 @@ L'écriture de ce `cmd` était déjà terminée quand j'ai entendu cette douce
 merveille légèrement funk. Heureusement, il n'est pas encore vendredi et il
 reste un peu de place ici.
 
-Il faut dire que ça colle bien au mood de ce vendre. Les guitares et la basse au
+Il faut dire que ça colle bien au mood du moment. Les guitares et la basse au
 centre pour un délicat jeu funky. Une rythmique lente - juste assez marquée pour
 hocher la tête sur tous les temps. Un petit peu de cuivres.
 
@@ -109,8 +109,8 @@ Je vous avais parlé de Anna von Hausswolff et de son Dark Ambient à l'orgue da
 musical qui fait difficilement consensus. Comme on l'aime beaucoup par ici, je
 me permets de faire une petite piqure de rappel.
 
-Je suis (re)tombé dessus par hasard en écoutant cette (radio
-mutante)[https://mutantradio.net/], encore. C'est surement parmi mes plus belles
+Je suis (re)tombé dessus par hasard en écoutant cette (radio mutante)[https://mutantradio.net/],
+encore. C'est surement parmi mes plus belles
 surprises, celle que de trouver sans prévoir un morceau que je reconnais du coin
 de l'oreille. Le morceau passe, là, discrète sur une radio Ambient qu'on a
 laisser tourner en arrière plan, comme pour habiter l'appartement un peu plus
