--- a/blog/_posts/2022-02-03-cmd-33.mdx
+++ b/blog/_posts/2022-02-03-cmd-33.mdx
@@ -109,7 +109,7 @@ Je vous avais parlé de Anna von Hausswolff et de son Dark Ambient à l'orgue da
 musical qui fait difficilement consensus. Comme on l'aime beaucoup par ici, je
 me permets de faire une petite piqure de rappel.
 
-Je suis (re)tombé dessus par hasard en écoutant cette (radio mutante)[https://mutantradio.net/],
+Je suis (re)tombé dessus par hasard en écoutant cette [radio mutante](https://mutantradio.net/),
 encore. C'est surement parmi mes plus belles
 surprises, celle que de trouver sans prévoir un morceau que je reconnais du coin
 de l'oreille. Le morceau passe, là, discrète sur une radio Ambient qu'on a
