--- a/blog/_posts/2022-02-03-cmd-33.mdx
+++ b/blog/_posts/2022-02-03-cmd-33.mdx
@@ -64,7 +64,7 @@ https://www.youtube.com/watch?v=A7K_SUuFX3w
 Ambiance BO de ces films de Noël américains, version grande réunion de famille.
 À utiliser là où le scénario se pose entre deux parties denses. 
 
-Acte 1. La grande famille est sont arrivée chez les grands-parents. Grands
+Acte 1. La grande famille arrive chez les grands-parents. Grands
 sourires et accolade chaleureuses. Repas et puis patatras! C'est le drama. Une
 vielle histoire et les gens sont en colère. Avant d'arriver au moment où tout le
 monde se retrouve et se réconcilie il nous faut un passage où chacun part de son
