--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -122,7 +122,7 @@ https://www.youtube.com/watch?v=31wmvUITYvg
 ### Ambient - Compilation : em:t 0094 (1994)
 
 Nous arrivons à la moitié de ce `cmd`. Il est donc grand temps de mettre nos
-vies un moment pour contempler l'instant présent.
+vies en pause un moment afin de contempler l'instant présent.
 
 J'ai pour cela le morceau qu'il nous faut, issu de la grande période du
 renouveau de l'Ambient : l'année 1994 qui a vu s'épanouir des labels comme le
